--- a/src/components/Typer/Interspector/Interspector.module.sass
+++ b/src/components/Typer/Interspector/Interspector.module.sass
@@ -1,7 +1,20 @@
 .right
   color: green
   display: inline-block
+  white-space: pre
 
 .wrong
   color: red
   display: inline-block
+  white-space: pre
+.divider
+  color: black
+  width: 1.5px
+  height: 20px
+  display: inline-block
+
+.divider_on
+  background-color: black
+.divider_off
+  background-color: white
+
